--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="footer">
 
 
-    <div>
+    <div class="container fluid">
       <a href="https://www.linkedin.com/in/harishbarathisivasubramanian/"><i class="social-icon fa-brands fa-linkedin"></i></a>
       <a href="https://twitter.com/Harishb26s"><i class="social-icon fa-brands fa-twitter"></i></a>
       <a href="https://github.com/HarishbarathiS"><i class="social-icon fa-brands fa-github"></i></a>
